# mai-team

./: .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  release-plz.toml
crates/mai-agents/: Cargo.toml
crates/mai-agents/src/: lib.rs
crates/mai-docker/: Cargo.toml
crates/mai-docker/src/: args.rs  capture.rs  client.rs  container.rs  copy.rs  error.rs  exec.rs  inspect.rs  lib.rs  mount.rs  naming.rs  selection.rs
crates/mai-mcp/: Cargo.toml
crates/mai-mcp/src/: constants.rs  error.rs  http.rs  lib.rs  manager.rs  naming.rs  protocol.rs  resources.rs  session.rs  stdio.rs  tools.rs
crates/mai-model/: Cargo.toml
crates/mai-model/src/: client.rs  error.rs  http.rs  lib.rs  provider.rs  types.rs  usage.rs
crates/mai-model/src/wire/: chat_completions.rs  mod.rs  responses.rs
crates/mai-protocol/: Cargo.toml
crates/mai-protocol/src/: agent_state.rs  lib.rs
crates/mai-relay/: CHANGELOG.md  Cargo.toml
crates/mai-relay-client/: Cargo.toml
crates/mai-relay-client/src/: backend.rs  client.rs  config.rs  event.rs  lib.rs  protocol.rs
crates/mai-relay/src/: callback_page.rs  delivery.rs  error.rs  main.rs  routes.rs  rpc.rs  session.rs  state.rs  store.rs
crates/mai-relay/src/github/: api.rs  app.rs  flow.rs  mod.rs  packages.rs  types.rs
crates/mai-relay/src/update/: download.rs  install.rs  mod.rs  release.rs
crates/mai-runtime/: Cargo.toml
crates/mai-runtime/src/: agents.rs  deps.rs  events.rs  framework_tests.rs  github.rs  instructions.rs  lib.rs  model_client.rs  model_profile.rs  model_projection.rs  model_selection.rs  runtime_agent_api.rs  runtime_agent_traits.rs  runtime_bootstrap.rs  runtime_config.rs  runtime_environment.rs  runtime_product_api.rs  runtime_project_traits.rs  runtime_provisioning.rs  runtime_resources.rs  runtime_review_context.rs  runtime_review_traits.rs  runtime_session_events.rs  runtime_skills.rs  runtime_task_traits.rs  runtime_tool_settings.rs  runtime_workspace.rs  state.rs  tasks.rs
crates/mai-runtime/src/agent_host/: events.rs  lifecycle.rs  mod.rs  policy.rs  protocol.rs  repository.rs  review_manifest.rs  session_wire.rs  sessions.rs  trace_projection.rs  turn_factory.rs
crates/mai-runtime/src/agents/: container.rs  create.rs  delete.rs  files.rs  fork.rs  input.rs  model.rs  observability.rs  profiles.rs  purge.rs  resources.rs  spawn.rs  turn.rs  update.rs  wait.rs
crates/mai-runtime/src/config/: conversion.rs  migration.rs  mod.rs
crates/mai-runtime/src/facade/: github_app.rs  mod.rs  project_github.rs  project_mcp.rs  turn_ops.rs
crates/mai-runtime/src/github/: accounts.rs  app.rs  etag_cache.rs  packages.rs  retry.rs  service.rs
crates/mai-runtime/src/mcp/: container_host.rs  container_runtime.rs  http.rs  manager.rs  mod.rs  protocol.rs  session.rs  stdio.rs  tools.rs  types.rs
crates/mai-runtime/src/projects/: instructions.rs  mcp.rs  mod.rs  review.rs  service.rs  skills.rs  workspace.rs
crates/mai-runtime/src/skills/: config.rs  injection.rs  manager.rs  mentions.rs  mod.rs  ordering.rs  parser.rs  paths.rs  render.rs  scan.rs  tests.rs
crates/mai-runtime/src/tasks/: artifacts.rs  lifecycle.rs  planning.rs  workflow.rs
crates/mai-runtime/src/tests/: mod.rs  project_github_tools.rs  project_mcp.rs  turn_runtime.rs
crates/mai-runtime/src/tools/: files.rs  git.rs  mod.rs
crates/mai-runtime/src/turn/: accounting.rs  agent_control.rs  cancellation.rs  command.rs  compaction.rs  completion.rs  container.rs  context.rs  control.rs  core_adapter.rs  history.rs  hosted_runtime.rs  kernel_tools.rs  mcp_resources.rs  mcp_tools.rs  mod.rs  model_stream.rs  orchestrator.rs  outcome.rs  persistence.rs  product_tool_schemas.rs  product_tools.rs  tool_artifact.rs  tool_output.rs  tool_visibility.rs  tools.rs
crates/mai-server/: CHANGELOG.md  Cargo.toml  build.rs
crates/mai-server/src/: lib.rs  main.rs  relay.rs
crates/mai-server/src/bootstrap/: mod.rs
crates/mai-server/src/config/: cli.rs  env.rs  mod.rs  paths.rs  relay.rs  server_config.rs
crates/mai-server/src/handlers/: agents.rs  assets.rs  config.rs  environments.rs  events.rs  git_accounts.rs  github_app.rs  helpers.rs  mod.rs  projects.rs  providers.rs  state.rs  tasks.rs
crates/mai-server/src/http/: mod.rs  router.rs  spa.rs
crates/mai-server/src/http/routes/: mod.rs  (+2 more)
crates/mai-server/src/infrastructure/: mod.rs  system_resources.rs
crates/mai-server/src/services/: artifacts.rs  events.rs  github.rs  mod.rs  providers.rs  relay_events.rs  relay_manager.rs
crates/mai-server/system-agents/project-maintainer/: AGENT.md
crates/mai-server/system-agents/project-reviewer/: AGENT.md
crates/mai-server/system-skills/github-pr-review/: SKILL.md
crates/mai-server/system-skills/reviewer-agent-review-pr/: SKILL.md
crates/mai-server/system-skills/reviewer-agent-select-prs/: SKILL.md
crates/mai-server/tests/: provider_smoke.rs
crates/mai-server/web/: eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.js  vite.config.ts
crates/mai-server/web/e2e/: workbench.spec.ts
crates/mai-server/web/src/: App.vue  index.css  main.js  main.tsx  styles.css  timeline.css
crates/mai-skills/: Cargo.toml
crates/mai-skills/src/: config.rs  constants.rs  error.rs  injection.rs  lib.rs  manager.rs  mentions.rs  parser.rs  paths.rs  render.rs  scan.rs  tests.rs
crates/mai-store/: Cargo.toml
crates/mai-store/src/: agent_runtime.rs  agent_runtime_tests.rs  artifacts.rs  config_document.rs  convert.rs  events.rs  git_accounts.rs  github_app.rs  lib.rs  logs.rs  projects.rs  providers.rs  records.rs  relay.rs  review_jobs.rs  runtime_state.rs  schema.rs  settings.rs  sqlite_busy.rs  store.rs  tasks.rs  tests.rs
crates/mai-store/src/agent_runtime/: projection.rs  state.rs
crates/mai-store/src/review_jobs/: storage.rs
crates/mai-tools/: Cargo.toml
crates/mai-tools/src/: lib.rs  names.rs  routing.rs  schema.rs
crates/mai-tools/src/definitions/: agents.rs  collab.rs  container.rs  files.rs  git.rs  github.rs  mcp.rs  mod.rs  review.rs  workflow.rs
(+198 files in other folders)
