[workspace]
members = [
    "crates/mai-agents",
    "crates/mai-docker",
    "crates/mai-mcp",
    "crates/mai-model",
    "crates/mai-protocol",
    "crates/mai-runtime",
    "crates/mai-server",
    "crates/mai-skills",
    "crates/mai-store",
    "crates/mai-tools",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
fnv = "1"
percent-encoding = "2"
schemars = "1"
shell-words = "1"
strum = { version = "0.28", features = ["derive"] }
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
futures = "0.3"
async-stream = "0.3"
http = "1"
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
mime_guess = "2"
reqwest = { version = "0.13", features = ["json", "rustls", "stream"], default-features = false }
rmcp = { version = "1.6.0", default-features = false }
rusqlite = "0.39"
rust-embed = { version = "8", features = ["interpolate-folder-path"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"
toml = "1"
toasty = { version = "0.5.0", features = ["sqlite"] }
toasty-driver-sqlite = "0.5.0"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
