[package]
name = "mai-agents"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dirs.workspace = true
mai-protocol = { path = "../mai-protocol" }
serde.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
