[package]
name = "mai-docker"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
shell-words.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
