[package]
name = "mai-docker"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
shell-words.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"
