[package]
name = "mai-docker"
version = "0.1.11"
edition.workspace = true
license.workspace = true

[dependencies]
pl-core.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"
