[package]
name = "mai-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mai-docker = { path = "../mai-docker" }
mai-protocol = { path = "../mai-protocol" }
fnv.workspace = true
futures.workspace = true
reqwest.workspace = true
rmcp = { workspace = true, features = ["client", "reqwest", "transport-async-rw", "transport-streamable-http-client-reqwest"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
