[package]
name = "mai-model"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mai-protocol = { path = "../mai-protocol", version = "0.1.2" }
async-stream.workspace = true
futures.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
