[package]
name = "mai-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
chrono.workspace = true
serde.workspace = true
strum.workspace = true
serde_json.workspace = true
uuid.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
