[package]
name = "mai-relay-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
mai-protocol = { path = "../mai-protocol" }
mai-runtime = { path = "../mai-runtime" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
uuid.workspace = true
