[package]
name = "mai-relay-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
futures.workspace = true
mai-protocol = { path = "../mai-protocol", version = "0.1.2" }
mai-runtime = { path = "../mai-runtime", version = "0.1.2" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio-tungstenite.workspace = true
tracing.workspace = true
uuid.workspace = true
