[package]
name = "mai-relay"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
compiled-github-app-config = []

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["ws"] }
base64.workspace = true
chrono.workspace = true
futures.workspace = true
flate2 = "1"
hmac = "0.12"
jsonwebtoken.workspace = true
mai-protocol = { path = "../mai-protocol" }
percent-encoding.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10"
tar = "0.4"
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
