[package]
name = "mai-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
base64.workspace = true
percent-encoding.workspace = true
shell-words.workspace = true
chrono.workspace = true
futures.workspace = true
jsonwebtoken.workspace = true
mai-docker = { path = "../mai-docker" }
mai-agents = { path = "../mai-agents" }
mai-mcp = { path = "../mai-mcp" }
mai-model = { path = "../mai-model" }
mai-protocol = { path = "../mai-protocol" }
mai-skills = { path = "../mai-skills" }
mai-store = { path = "../mai-store" }
mai-tools = { path = "../mai-tools" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true
async-trait.workspace = true

[dev-dependencies]
libc = "0.2"
pretty_assertions.workspace = true
