[package]
name = "mai-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
percent-encoding.workspace = true
shell-words.workspace = true
chrono.workspace = true
futures.workspace = true
jsonwebtoken.workspace = true
mai-docker = { path = "../mai-docker", version = "0.1.2" }
mai-agents = { path = "../mai-agents", version = "0.1.2" }
mai-mcp = { path = "../mai-mcp", version = "0.1.2" }
mai-model = { path = "../mai-model", version = "0.1.2" }
mai-protocol = { path = "../mai-protocol", version = "0.1.2" }
mai-skills = { path = "../mai-skills", version = "0.1.2" }
mai-store = { path = "../mai-store", version = "0.1.2" }
mai-tools = { path = "../mai-tools", version = "0.1.2" }
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
uuid.workspace = true
async-trait.workspace = true

[dev-dependencies]
libc = "0.2"
pretty_assertions.workspace = true
