[package]
name = "mai-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
futures.workspace = true
http.workspace = true
mime_guess.workspace = true
mai-docker = { path = "../mai-docker" }
mai-model = { path = "../mai-model" }
mai-protocol = { path = "../mai-protocol" }
mai-relay-client = { path = "../mai-relay-client" }
mai-runtime = { path = "../mai-runtime" }
mai-store = { path = "../mai-store" }
rust-embed.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
reqwest.workspace = true
tempfile.workspace = true
