[package]
name = "mai-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
chrono.workspace = true
clap.workspace = true
futures.workspace = true
http.workspace = true
mime_guess.workspace = true
mai-docker = { path = "../mai-docker", version = "0.1.2" }
mai-model = { path = "../mai-model", version = "0.1.2" }
mai-protocol = { path = "../mai-protocol", version = "0.1.2" }
mai-relay-client = { path = "../mai-relay-client", version = "0.1.2" }
mai-runtime = { path = "../mai-runtime", version = "0.1.2" }
mai-store = { path = "../mai-store", version = "0.1.2" }
reqwest.workspace = true
rust-embed.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tempfile.workspace = true
