[package]
name = "mai-skills"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dirs.workspace = true
gray_matter.workspace = true
mai-protocol = { path = "../mai-protocol" }
serde.workspace = true
serde-saphyr.workspace = true
thiserror.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
