[package]
name = "mai-skills"
version = "0.1.11"
edition.workspace = true
license.workspace = true

[dependencies]
dirs.workspace = true
gray_matter.workspace = true
mai-protocol = { path = "../mai-protocol", version = "0.1.11" }
serde.workspace = true
serde-saphyr.workspace = true
thiserror.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
