[package]
name = "mai-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
dirs.workspace = true
mai-protocol = { path = "../mai-protocol" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true

[dev-dependencies]
tempfile.workspace = true
