[package]
name = "mai-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
chrono.workspace = true
mai-protocol = { path = "../mai-protocol" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
thiserror.workspace = true
tokio.workspace = true
toasty.workspace = true
toasty-driver-sqlite.workspace = true
toml.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile.workspace = true
