[package]
name = "mai-tools"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mai-mcp = { path = "../mai-mcp", version = "0.1.2" }
mai-protocol = { path = "../mai-protocol", version = "0.1.2" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
