[package]
name = "mai-tools"
version = "0.1.11"
edition.workspace = true
license.workspace = true

[dependencies]
mai-mcp = { path = "../mai-mcp", version = "0.1.11" }
mai-protocol = { path = "../mai-protocol", version = "0.1.11" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
